# toolkit

./: .gitattributes  .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  install.sh  main.go  main.py  pyproject.toml  test.yaml
sdk-python/: README.md  doc.sh  main.py  pyproject.toml
sdk-python/beamlit/: __init__.py  client.py
sdk-python/beamlit/models/: __init__.py  acl.py  agent.py  agent_chain.py  agent_configuration.py  agent_deployment.py  agent_deployment_configuration.py  agent_deployment_history.py  agent_deployment_history_event.py  agent_deployment_pod_template.py  agent_release.py  api_key.py  authentication_provider_model.py  authentication_provider_organization.py  configuration.py  continent.py  country.py  create_api_key_for_service_account_body.py  create_workspace_service_account_body.py  create_workspace_service_account_response_200.py  delete_workspace_service_account_response_200.py  deployment_configuration.py  deployment_configurations.py  deployment_serverless_config.py  environment.py  environment_metrics.py  flavor.py  function.py  function_configuration.py  function_deployment.py  function_deployment_configuration.py  function_deployment_pod_template.py  function_kit.py  function_provider_ref.py  function_release.py  get_workspace_service_accounts_response_200_item.py  invite_workspace_user_body.py  labels.py  location.py  location_response.py  (+50 more)
sdk-python/src/: main.py
sdk-python/src/beamlit/: authentication.py  credentials.py  run.py
sdk-python/src/integrationtest/: agent.py  chat.py  main.py  voiceagent.py
(+931 files in other folders)
