[project]
name = "toolkit"
version = "0.1.0"
description = "Blaxel toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openapi-python-client>=0.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]