[tool.poetry]
name = "beamlit"
version = "0.0.1"
description = "A client library for accessing Beamlit Control Plane"
authors = []
readme = "README.md"
packages = [
    {include = "beamlit"},
]
include = ["CHANGELOG.md", "beamlit/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
